--- a/nomina/employees/templates/employees/form.html
+++ b/nomina/employees/templates/employees/form.html
@@ -49,7 +49,7 @@
         </div>
         <div class="info-row">
           <label class="label" for="id_mensual_salary">Salario mensual:</label>
-          <input type="text" name="mensual_salary" id="id_mensual_salary" class="value" value="{{ form.mensual_salary.value|floatformat:2|intcomma }}">
+          <input type="number" name="mensual_salary" id="id_mensual_salary" class="value" value="{{ form.mensual_salary.value|floatformat:2 }}">
         </div>
         <div class="actions">
           <button type="submit" class="edit-button">Guardar</button>
