--- a/nomina/static/css/employee/edit.css
+++ b/nomina/static/css/employee/edit.css
@@ -85,24 +85,32 @@
 
 .actions {
     display: flex;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    text-align: center;
     margin-bottom: auto;
     justify-content: space-between;
 }
 
-.edit-button,
 .cancel-button {
+    border: none;
     color: #ffffff;
+    cursor: pointer;
     font-size: 14px;
     min-width: 100px;
     max-width: 200px;
-    padding: 10px 5vw;
+    text-align: center;
     border-radius: 8px;
+    padding: 10px 5vw;
     display: inline-block;
     text-decoration: none;
+}
+
+.edit-button {
+    text-align: center;
+    padding: 10px 100px;
     border: none;
+    color: #ffffff;
     cursor: pointer;
+    border-radius: 8px;
 }
 
 .edit-button {
