--- a/nomina/departments/templates/departments/list.html
+++ b/nomina/departments/templates/departments/list.html
@@ -1,15 +1,31 @@
-{% extends 'departments/base.html' %}
+{% extends 'base.html' %}
+{% load static %}
 
-{% block title %}Departments{% endblock %}
+{% block title %}Departamentos{% endblock %}
+
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/departments/list.css' %}" />
+{% endblock %}
 
 {% block content %}
-  <h1>Departments</h1>
-  <a href="{% url 'department_create' %}">New Department</a>
-  <ul>
-    {% for department in departments %}
-      <li>
-        <a href="{% url 'department_detail' department.pk %}">{{ department.name }}</a>
-      </li>
-    {% endfor %}
-  </ul>
+  <div class="main_cont">
+    <div class="main_header">
+        <h1>Departamentos</h1>
+        <a href="{% url 'department_create' %}" class="create-button">Crear departamento</a>
+    </div>
+    
+    <ul class="department-list">
+        {% for department in departments %}
+        <li class="department-item">
+            <a href="{% url 'department_detail' department.pk %}">
+                <div class="department-info">
+                    <strong>{{ department.name }}</strong>
+                    <p>{{ department.employee_set.count }} {{ department.employee_set.count|pluralize:"empleado,empleados" }}</p>
+                </div>
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+  </div>
 {% endblock %}
+
