Updated deductions templates

--- a/nomina/deductions/templates/deductions/delete.html
+++ b/nomina/deductions/templates/deductions/delete.html
@@ -1,13 +1,26 @@
-{% extends 'deductions/base.html' %}
+{% extends 'base.html' %}
+{% load static %}
 
-{% block title %}Delete Deduction{% endblock %}
+{% block title %}Eliminar Deducción{% endblock %}
+
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/deductions/delete.css' %}" />
+{% endblock %}
 
 {% block content %}
-<h1>Delete Deduction</h1>
-<p>Are you sure you want to delete "{{ deduction.name }}"?</p>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit">Yes, delete</button>
-</form>
-<a href="{% url 'deduction_list' %}">Cancel</a>
+  <div class="delete-container">
+    <div class="main_header">
+        <h1>Eliminar Deducción</h1>
+        <a href="{% url 'deduction_list' %}" class="back-link">&lt; Volver atrás</a>
+    </div>
+    
+    <p class="confirmation-text">¿Estás seguro que deseas eliminar la deducción "{{ deduction.name }}"?</p>
+    
+    <form method="post" class="delete-form">
+      {% csrf_token %}
+      <button type="submit" class="delete-button">Sí, eliminar</button>
+      <a href="{% url 'deduction_list' %}" class="cancel-button">Cancelar</a>
+    </form>
+  </div>
 {% endblock %}
+
